SERVER-60622 Fix typos in update_driver.cpp error messages